[tool.poetry]
name = "touchmebot"
version = "0.1.0"
description = ""
authors = ["Will Rollins <rollinsjw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
discord-py = "^2.4.0"
openai = "^1.59.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
